--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,8 +1,9 @@
-.square {
-    border: 1px solid #999;
+.header {
+    background: #fff;
+    border: 0px solid #999;
     float: left;
-    font-size: 24px;
-    font-weight: bold;
+    font-size: 12px;
+    font-weight: normal;
     line-height: 34px;
     height: 34px;
     margin-right: -1px;
@@ -12,14 +13,6 @@
     width: 34px;
 }
 
-.square.dark {
-    background: #BBB;
-}
-
-.square.light {
-    background: #fff;
-}
-
-.square:focus {
+.header:focus {
     outline: none;
 }
