--- a/src/components/header/label.css
+++ b/src/components/header/label.css
@@ -1,4 +1,4 @@
-.header {
+.label {
     background: #fff;
     border: 0px solid #999;
     float: left;
@@ -13,6 +13,6 @@
     width: 34px;
 }
 
-.header:focus {
+.label:focus {
     outline: none;
 }
